# Train-Ticket-Booking

./: BACKEND_REQUIREMENTS.md  INTEGRATION_GUIDE.md  README.md  index.html  index2.html  script.js  style.css
backend/: .dockerignore  .gitignore  API_ROUTES.md  CMakeLists.txt  Dockerfile  README.md  config.json  docker-compose.yml
backend/data/: README.md  ROUTES_REFERENCE.md
backend/include/controllers/: AuthController.h  BookingController.h  TrainController.h
backend/include/models/: Booking.h  Passenger.h  Train.h  User.h
backend/include/services/: AuthService.h  BookingService.h  SeatAllocationService.h
backend/include/utils/: DataStore.h  HTTPServer.h  Request.h  Response.h  Router.h
backend/src/: main.cpp
backend/src/controllers/: AuthController.cpp  BookingController.cpp  TrainController.cpp
backend/src/models/: Booking.cpp  Passenger.cpp  Train.cpp  User.cpp
backend/src/services/: AuthService.cpp  BookingService.cpp  SeatAllocationService.cpp
backend/src/utils/: DataStore.cpp  HTTPServer.cpp  Request.cpp  Response.cpp  Router.cpp
